fix: unwanted link color in dark mode

--- a/assets/css/utils/_variables.scss
+++ b/assets/css/utils/_variables.scss
@@ -38,7 +38,7 @@ html[lang="en-US"] {
     --border-color: rgba(255, 255, 255, 0.2);
     --text-color: #d2cec9;
     --secondary-text-color: #a1998d;
-    --link-color: #277bd9;
+    --link-color: #e3dfda;
     --bright-background-color: #666;
 }
 
